fixing alignment inconsistency for mobile view

--- a/index.css
+++ b/index.css
@@ -235,4 +235,7 @@ p1{
     grid-gap: 16px;
     grid-template-columns: repeat(auto-fill, 100px);
 }
+.working{
+    width: 100%;
+}
   }
